# Enterprise-Hospital-Management-System

./: CMakeLists.txt  README.md  main.cpp
data/: README_data_ingestion.md  admins_large.csv  departments_large.csv  doctors.csv  doctors_large.csv  inventory_large.csv  items_large.csv  labs_large.csv  log.txt  nurses.csv  nurses_large.csv  patients.csv  shiftdetails_large.csv  shiftschedules_doctors_large.csv  shiftschedules_nurses_large.csv  stockitems_large.csv  suppliers_large.csv  tests_large.csv
include/: AdministrativeStaff.h  Appointment.h  Billing.h  DataObject.h  Department.h  Doctor.h  Inventory.h  Item.h  Lab.h  Logger.h  MedicalRecord.h  Nurse.h  ObjectCache.h  ObjectCounter.h  Patient.h  Person.h  Prescription.h  ShiftDetails.h  ShiftSchedule.h  Staff.h  StockItem.h  Supplier.h  Test.h  config.h
src/: AdministrativeStaff.cpp  Appointment.cpp  Billing.cpp  Department.cpp  Doctor.cpp  Inventory.cpp  Item.cpp  Lab.cpp  Logger.cpp  MedicalRecord.cpp  Nurse.cpp  ObjectCache.cpp  ObjectCounter.cpp  ObjectData.cpp  Patient.cpp  Person.cpp  Prescription.cpp  ShiftDetails.cpp  ShiftSchedule.cpp  Staff.cpp  StockItem.cpp  Supplier.cpp  Test.cpp
utils/: Builder.cpp  Builder.h  BuilderFactory.cpp  BuilderFactory.h  DoctorBuilder.cpp  DoctorBuilder.h  NurseBuilder.cpp  NurseBuilder.h  PatientBuilder.cpp  PatientBuilder.h  generate_large_data.py
